[package]
name = "discarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
regex = "1.7.2"
whoami = "1.4.0"
winapi = { version = "0.3.9", features = ["dpapi", "winbase"]}
reqwest = { version = "0.11.16", features = ["json"]}
serde = { version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros"]}